fixes in dark mode

--- a/src/app/features/user-panel/user-panel.component.scss
+++ b/src/app/features/user-panel/user-panel.component.scss
@@ -11,10 +11,6 @@
         justify-content: center;
         align-items: center;
 
-        mat-icon, mat-card-title {
-            color: #1e2935;
-        }
-
         .img-card-content {
             max-width: 270px;
             padding: 35px;
