--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -29,11 +29,7 @@ mat-sidenav-container {
     padding: 5px;
     display: flex;
     align-items: center;
-    color: #1e2935;
-  
-    .icon {
-      color: #1e2935;
-    }
+    // color: #1e2935;
   
     .label {
       padding-left: 10px;
